--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,31 @@ body{
     margin-top: 60px;
 }
 
-
+/* human capital */
+.human-section{
+    background-image: url('../assets/human.png');
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: brightness(0.9);
+    position: relative;
+}
+.human-section::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none; 
+  }
+.human-section > div {
+    position: relative;
+    z-index: 1;
+}
+.human-section h1,
+.human-section p {
+    color: white !important;
+}
 @media (max-width: 991.98px) {
     .navbar-collapse .navbar-nav{
         position: static !important;
