--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ a.contact-us-button:hover {
     margin-top: 120px;
 }
 .about-us-section h4{
-    color:  #41198a;
+    color:  white;
     font-size: 42px;
     font-weight: 700;
 }
